--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,124 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(25, 48, 61);
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h1 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 16px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h2 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: "30px";
+  margin-bottom: 4px;
 }
 
-a {
-  color: inherit;
+p {
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+
+main {
+  display: flex;
+  min-height: calc(100vh - 70px);
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 36px 0px;
+}
+
+.container {
+  max-width: 650px;
+  width: 100%;
+  padding: 0 16px;
+}
+
+.card {
+  width: 100%;
+  padding: 24px 32px;
+  border: 1px solid rgb(173, 188, 197);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button.primary {
+  width: 100%;
+  height: 45px;
+  cursor: pointer;
+  font-size: 18px;
+  color: white;
+  background-color: #4a37be;
+  border: none;
+  border-radius: 4px;
+}
+
+pre.code-block {
+  max-height: 200px;
+  width: 100%;
+  overflow: scroll;
+  background-color: #10232e;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 8px;
+  margin-bottom: 16px;
+}
+
+pre.code-block > code {
+  color: white;
+  font-family: monospace;
+}
+
+span.code {
+  font-family: monospace;
+  font-weight: 400;
+  line-height: 28px;
+  padding-left: 4px;
+  border-radius: 4px;
+  padding-right: 4px;
+  background-color: #ecfaff;
+}
+
+header {
+  width: 100%;
+  height: 70px;
+  background-color: #eeecff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+  gap: 16px;
+}
+
+header > a > img {
+  max-width: 250px;
+  height: 100%;
+  overflow: hidden;
+}
+
+a.header {
+  font-size: 16px;
+  font-weight: 600;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  border-radius: 4px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a.header:hover {
+  background-color: #d4ceff;
+}
+
+header > .link-container {
+  display: flex;
+  gap: 16px;
 }
